2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* init.c: Rename STACK_CHECKER_ON to more appropriate
	CONFIGURE_STACK_CHECKER_ENABLED.

2008-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* init.c: Eliminate use of boolean type. Use C99 bool.

2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* init.c: Fix missing initializers warning.

2008-08-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shttpd_ext.c: Fix warning.

2007-12-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile, init.c: Make sure POSIX threading is enabled if using
	GoAhead.

2007-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: bin2c now rtems-bin2c.

2007-11-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile: No use of objdump.

2007-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Cleanup.

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shttpd_index.html: Fix URL for shttpd.

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* goahead_index.html: This is not preprocessed so hard code name.
	* init.c: Simple HTTPD is using ~39K stack space with this test.
	Make the stack for the SHTTPD server 48K.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shttpd_ext.c: Use new name.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile, init.c, rootfs/.cvsignore: Add some dynamic content.
	Can now look at cpu usage, reset cpu usage and print a stack
	usage report.
	* goahead_index.html, shttpd.png, shttpd_ext.c, shttpd_index.html:
	New files.
	* index.html.in: Removed.

2007-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* init.c: Remove TARFILE_XXX macros.

2007-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Use bin2c to more reliably turn the tarfile into a
	linkable object file. Ignore .cvsignore when making tarfile.
	* init.c: Clean up tarfile symbol definitions.
	* .cvsignore, rootfs/.cvsignore: New files.

2007-08-16	Joel Sherrill <joel.sherrill@oarcorp.com>
