@@ -1,3 +1,7 @@
+2009-02-10	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile: Fix typo.
+
 2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* init.c: Rename STACK_CHECKER_ON to more appropriate
